# whs_snow_day

./: .debug.env  .gitignore  .release.env  Cargo.toml  Config.toml  Dockerfile  README.md
src/: alert.rs  args.rs  config.rs  fetch.rs  main.rs  post.rs  utils.rs
src/webhook/: discord.rs
