[package]
name = "whs_snow_day"
version = "0.1.0"
authors = ["DusterTheFirst <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.3.1"
dotenv = "0.15.0"
serde = {version = "1.0.103", features=["derive"]}
serde_json = "1.0.44"
toml = "0.5.5"
reqwest = "0.9.24"
md5 = "0.7.0"